# csv_fltk_Serde_ViviendasEjemplo

./: Cargo.toml
src/: Vista.rs  entidad.rs  main.rs
src/cvs/: personas.cvs
src/tests/: integration.rs
