[package]
name = "viviendas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
csv = "1.1.6"
#error-chain = "0.12.4"
fltk = { version = "^1.3", features = ["fltk-bundled"] }
fltk-table="0.2.1"
